--- a/LogicalProgramming/LogicalProgramming.csproj
+++ b/LogicalProgramming/LogicalProgramming.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CouponNumbers.cs" />
+    <Compile Include="DayOfWeek.cs" />
     <Compile Include="FibonacciSeries.cs" />
     <Compile Include="PerfectNumber.cs" />
     <Compile Include="PrimeNumber.cs" />
